k8s-sample/templates/rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-sample
  labels:
    app: rest-api-sample
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: rest-api-sample
  selector:
    app: rest-api-sample
