k8s-sample/templates/spa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-sample
  labels:
    app: spa-sample
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: spa-sample
  selector:
    app: spa-sample
